# PySpark_Local

./: LICENSE  README.md  pyproject.toml  quick_start.ipynb  spark_setup.ipynb  student_example.ipynb  test.ipynb  test_pyspark_quick_fix.py
docs/: SETUP_INSTRUCTIONS.md  common_pitfails.md
src/pyspark_local/: __init__.py  cli.py  setup.py  validation.py
src/pyspark_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  pyspark_test_deployment.py  test_PySpark.py  test_environment.py  test_spark_session.py  test_validation.py
