[project]
name = "pyspark-local"
version = "0.1.0"
description = "PySpark course materials with easy setup for students"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "findspark>=2.0.1",
    "notebook>=7.4.7",
    "pyspark>=3.5.0,<4.0.0",
    "pyarrow>=14.0.0"
]

[project.scripts]
pyspark-check = "pyspark_local.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=pyspark_local",
    "--cov-report=term-missing"
]
timeout = 300

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
